--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,11 +3,15 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <img class="img-responsive" src="img/profile.png" alt="">
+                    <img class="img-responsive" src="img/curly256.png" alt="">
                     <div class="intro-text">
                         <span class="name">{{ site.title }}</span>
                         <hr class="star-light">
-                        <span class="skills">{{ site.skills }}</span>
+                        <span class="skills">
+                            <p><strong>Beautifurl</strong> helps make your URLs beautiful when they unfurl or embed in Slack, Medium, Facebook, Twitter, and more.</p>
+                            <p>We're just getting started in building a great service for bloggers, content specialists, and growth marketers of all kinds. We're building flexible tools that let you customize how your content displays on other sites, without having to upgrade or custom code your blog, content management system, or web app.</p>
+                            <p>Interested in learning more or being one of the first beta testers?<br />Fill out the contact form below to get in touch.</p>
+                        </span>
                     </div>
                 </div>
             </div>
